# trading-system

./: .gitignore  BUILD_SPEC.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  MASTER PLAN v3.md  backtest.py  config.py  factors.py  pyproject.toml  railway.json  render.yaml  scorer.py
api/: __init__.py  datasource.py  main.py  pipeline.py
data/: __init__.py  adapter.py  constituents.py
skills/ponytail/: SKILL.md
tests/: __init__.py  test_adapter.py  test_backtest.py  test_factors.py  test_scorer.py
web/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BacktestView.tsx  CompareOosView.tsx  ConfigBar.tsx  GateVerdict.tsx  PortfolioView.tsx  charts.tsx  icons.tsx  ui.tsx
web/lib/: api.ts  format.ts  metrics.ts  types.ts
